# iot

./: .gitignore  CMakeLists.txt  NOTES.md  battery_service.c  battery_service.h  ble_better.c  ble_better.h  ble_manager.c  ble_manager.h  ble_utils.c  common.h  event_manager.c  event_manager.h  gap.c  gap.h  gatt_svc.c  hardware_manager.c  hardware_manager.h  http_manager.c  http_manager.h  led_service.h  main.c  protocol_manager.c  protocol_manager.h  server_main.c  wifi_config.html  wifi_manager.c  wifi_manager.h
ble/: battery_service.c  battery_service.h  ble_manager.c  ble_manager.h  command_service.c  command_service.h  common.h  device_info_service.c  device_info_service.h  device_provisioning_service.c  device_provisioning_service.h  gap.c  gap.h  gatt_server.c  gatt_server.h  gatt_svc.c  gatt_svc.h  provisioning_service.c  provisioning_service.h  telemetry_service.c  telemetry_service.h  wifi_config_service.c  wifi_config_service.h
ble_drivers/: itag_driver.c  itag_driver.h
data/: aquarium_data.c  aquarium_data.h
gatt_client/: gatt_client.c  gatt_client.h  keyboard_simulator.h  manager.c  manager.h  utils.c  utils.h
gatt_server/: battery_service.c  common.h  gap.c  gatt_server.c  gatt_server.h  gatt_svc.c  gatt_svc.h  hid_keyboard_service.c  hid_keyboard_service.h  keyboard_service.c  keyboard_service.h  led_service.c  wifi_config_service.c  wifi_config_service.h
hardware/: beam_driver.c  beam_driver.h  bitmap.h  button_driver.c  button_driver.h  convert_image.py  fish_image.h  hardware_manager.c  hardware_manager.h  oled_commands.h  oled_demo.c  oled_manager.c  oled_manager.h  ssd1306.c  ssd1306.h  ssd1306.md  ssd1306_commands.h  ssd1306_demo.c  ssd1306_demo.h
hardware/buttons/: button.c  button.h  config_button.c  config_button.h  confirm_button.c  confirm_button.h  display_button.c  display_button.h  feed_button.c  feed_button.h  left_button.c  left_button.h  right_button.c  right_button.h
hardware/display/: display_driver.c  display_driver.h  display_manager.c  display_manager.h  ssd1306.c  ssd1306.h
hardware/feeder/: beam_driver.c  beam_driver.h  motor_driver.c  motor_driver.h
hardware/ph/: ph_sensor_driver.c  ph_sensor_driver.h
hardware/temperature/: temp_sensor_driver.c  temp_sensor_driver.h
mqtt/: Notes.txt  http_manager.c  http_manager.h  mqtt_manager.c  mqtt_manager.h  mqtt_publisher.c  mqtt_publisher.h
mqtt/client/: README.md  broker_config.yaml  mqtt_subscriber.py
mqtt_app/: README.md  aquatest_config.json  mqtt_subscriber.py
old/: hid_keyboard_service.c
old/gatt_client/: gatt_client.c  keyboard_simulator.c
utils/: fs_utils.c  fs_utils.h  nvs_utils.c  nvs_utils.h
wifi/: wifi_config.html  wifi_manager.c  wifi_manager.h
